// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeSpec should render Badge 1`] = `
<div
  className="tc-badge tc-badge tc-badge-readonly tc-badge-readonly"
  style={undefined}
>
  <button
    className="tc-badge-button tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with category and delete icon 1`] = `
<div
  className="tc-badge tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-category tc-badge-category"
    >
      Category
    </span>
    <span
      className="tc-badge-label tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with selection handler and select id 1`] = `
<div
  className="tc-badge tc-badge tc-badge-readonly tc-badge-readonly"
  style={undefined}
>
  <button
    className="tc-badge-button tc-badge-button"
    disabled={false}
    id="tc-badge-select-select"
    onClick={[Function]}
  >
    <span
      className="tc-badge-label tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render disabled Badge with delete icon and delete id 1`] = `
<div
  className="tc-badge tc-badge tc-badge-disabled tc-badge-disabled"
  style={undefined}
>
  <button
    className="tc-badge-button tc-badge-button"
    disabled={true}
    id="tc-badge-select-delete"
    onClick={undefined}
  >
    <span
      className="tc-badge-label tc-badge-label"
    >
      Label
    </span>
  </button>
  <span
    onFocus={[Function]}
    onMouseOver={[Function]}
  >
    <button
      className="tc-badge-delete-icon tc-badge-delete-icon btn-disabled btn btn-default"
      disabled={true}
      id="tc-badge-delete-delete"
      onClick={[Function]}
      onMouseDown={[Function]}
      role={null}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="tc-svg-icon tc-svg-icon"
        focusable="false"
        title={null}
      >
        <use
          xlinkHref="#talend-cross"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`BadgeSpec should render selected Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge tc-badge-selected tc-badge-selected"
  style={undefined}
>
  <button
    className="tc-badge-button tc-badge-button"
    disabled={false}
    onClick={undefined}
  >
    <span
      className="tc-badge-label tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;
